--- a/public/css/view.css
+++ b/public/css/view.css
@@ -1,3 +1,11 @@
 .noHover {
     pointer-events: none;
 }
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background:#212529;
+}
