--- a/public/css/view.css
+++ b/public/css/view.css
@@ -105,3 +105,13 @@ footer {
 }
 
 /* add button - end */
+
+.channel{
+    transition: 0.4s;
+}
+
+.channel:hover {
+    transform: scale(0.95, 0.95);
+    box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
+    -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+}
